# llm-zoomcamp

./: LICENSE
01-agentic-rag/: homework-byme.ipynb
02-vector-search/: homework-byme.ipynb
03-orchestration/: docker-compose.yml
04-evaluation/: homework-byme.ipynb
05-monitoring/: homework-byme.ipynb  pyproject.toml  q1_trace.py  q2_metrics.py  q3_llmduration.py  q4_savingtracestoSQLite  q5_duration.py  q6_stability.py
06-dlt Workshop/: check_single_run.py  count_spans.py  dlt_ingest.py  dlt_pipeline.py  homework-byme.ipynb  logfire_pipeline.py  main.py  pyproject.toml  query_q3.py  traces.json  verify_q2.py
